Fix realartists/shiphub-cocoa#79 Add comment field can get clipped

--- a/IssueWeb/app/index.css
+++ b/IssueWeb/app/index.css
@@ -488,6 +488,7 @@ div.IssueLabels .LabelContainer {
 
 .CodeMirrorContainer {
   margin: 8px;
+  min-height: 28px;
 }
 
 .CodeMirror {
